[B]Version 1.0.8 - 2020-01-01[/B]
- website change / add hls streaming
[B]Version 1.0.7 - 2018-05-31[/B]
- add description for videos and more checks
[B]Version 1.0.6 - 2018-05-07[/B]
- add selector for regions
[B]Version 1.0.5 - 2018-05-03[/B]
- primary rewrote stream logic
[B]Version 1.0.4 - 2017-02-11[/B]
- fix for international changes
[B]Version 1.0.3 - 2017-02-11[/B]
- fix for website changes
[B]Version 1.0.2 - 2016-09-20[/B]
- fixed live channel, alternate parsing
[B]Version 1.0.1 - 2016-09-15[/B]
- fixed live channel
[B]Version 1.0.0 - 2016-04-21[/B]
- pre release (beta)
