@@ -8,7 +8,6 @@
     <extension point="xbmc.python.pluginsource" library="addon.py">
         <provides>video</provides>
     </extension>
-    <extension point="xbmc.service" library="service.py" start="startup" />
     <extension point="xbmc.addon.metadata">
         <summary lang="en">earthTV</summary>
         <description lang="en">The earthTV cameras show impressions from different locations: sizzling metropolises, impressive landscapes, famous sights and more.</description>
