@@ -1,5 +1,6 @@
 [B]Version 1.0.8 - 2020-01-01[/B]
 - website change / add hls streaming
+- removed service for HLS streaming
 [B]Version 1.0.7 - 2018-05-31[/B]
 - add description for videos and more checks
 [B]Version 1.0.6 - 2018-05-07[/B]
